# agentic-rl-qwen3

./: .gitattributes  .gitignore  .gitmodules  README.md  learn  pyproject.toml  requirements.txt
configs/algorithm/: grpo_balanced.yaml  grpo_sequence.yaml  grpo_sequence_bypass.yaml  grpo_token.yaml
configs/credit/: hindsight_turn.yaml
configs/data/: airline_official.json
configs/env/: tau_airline.yaml  tau_airline_eval.yaml  tau_airline_train.yaml  tau_all.yaml  tau_retail.yaml  tau_telecom.yaml
configs/eval/: qwen3_8b_deepseek_v4_airline.yaml  robustness.yaml
configs/model/: qwen3_8b_full.yaml  qwen3_8b_lora.yaml
configs/reward/: binary.yaml  environment_process.yaml  outcome.yaml  prm_lite.yaml  prm_lite_lata.yaml
configs/rollout/: async.yaml  strata.yaml  strata_gigpo.yaml  sync.yaml  sync_16.yaml  tau_agent_loop.yaml  vanilla.yaml
configs/runtime/: pro6000_g4_concurrency16.yaml  pro6000_g4_micro2.yaml  pro6000_g4_smoke.yaml  pro6000_g4_tokens32k.yaml  pro6000_single_gpu.yaml
configs/train/: e0_base_eval.yaml  e1_grpo_sequence.yaml  e2_grpo_balanced.yaml  e2_grpo_token.yaml  e3_grpo_balanced.yaml  e3_sequence_process.yaml  e4_balanced_process.yaml  e4_sequence_hindsight.yaml  e5_balanced_hindsight.yaml  e5_balanced_process_hindsight.yaml  (+9 more)
docs/: algorithm_notes.md  data_pipeline.md  experiment_plan.md  gpu_budget.md  issue_notes.md  performance_validation_checklist.md  project_design.md  prompt_design.md  remote_validation_checklist.md  reward_design.md  tau2_learning_notes.patch  tau2_notes.md
patches/: verl_checkpoint_retention.patch
(+142 files in other folders)
