[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rl-qwen3"
version = "0.1.0"
description = "Qwen3 agent RL on tau2/tau3-bench with verl and vLLM"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

