[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rl-qwen3"
version = "0.1.0"
description = "Qwen3 agent RL on tau2/tau3-bench with verl and vLLM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
